# chess-engine-nnue

./: .gitignore  CLAUDE.md  Cargo.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: engine.rs
books/: openings.epd
data/: nnue_sample.txt  texel_sample.txt
docs/: 00-overview.md  01-research-landscape.md  02-tech-stack.md  03-roadmap.md  04-nnue.md  05-board-representation.md  06-move-generation.md  07-testing.md  08-search-internals.md  09-strength-baseline.md  CLAUDE.md  README.md  resources.md
docs/decisions/: 0000-template.md  0001-language-rust.md  0002-board-bitboards.md  0003-nnue-trainer-bullet.md  0004-cutechess-testing.md  0005-zobrist-hashing.md  0006-transposition-table.md  0007-repetition-history.md  0008-magic-bitboards.md  0009-principal-variation-search.md  0010-late-move-reductions.md  0011-null-move-pruning.md  0012-texel-tuning.md  0013-see-check-extensions.md  0014-forward-pruning.md  0015-aspiration-windows.md  0016-nnue-first-net-architecture.md  0017-nnue-inference-incremental-accumulator.md  0018-nnue-simd-inference.md
examples/: gen_data.rs  genbook.rs  texel.rs
scripts/: anchors-ccrl.txt  anchors-maia.txt  anchors.txt  gauntlet.sh  release.sh  setup-anchors.sh  sprt.sh
src/: CLAUDE.md  bitboard.rs  board.rs  eval.rs  fen.rs  lib.rs  magic.rs  main.rs  movegen.rs  moves.rs  nnue.rs  perft.rs  search.rs  timeman.rs  tt.rs  types.rs  uci.rs  zobrist.rs
trainer/: Cargo.toml  README.md
trainer/bullet-train/: Cargo.toml
trainer/bullet-train/src/: main.rs
trainer/verify/: Cargo.toml
trainer/verify/src/: main.rs
